# synacor-challenge

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arch-spec  code1.txt  code2.txt  code3.txt  confirmation.cpp  confirmation.h  debug-notes.txt  debugger.txt  main.cpp  strange-book.txt  use-teleporter-nonzero.txt  vm.cpp  vm.h
codes/: code2.txt  code4.txt  code5.txt  code6.txt  code7.txt  code8.txt
ingame-texts/: journal.txt  teleporter-patched.txt  vault.txt
notes/: confirmation-process.txt  confirmation-solution.txt  confirmation-success.txt  debug-notes.txt
source/: confirmation.h  debugger.cpp  debugger.h  main.cpp  utils.cpp  utils.h  vm.cpp  vm.h
